tests/baselines/reference/spellingUncheckedJS.errors.txt
tests/cases/conformance/salsa/other.js(3,1): error TS2552: Cannot find name 'Jon'. Did you mean 'John'?
tests/cases/conformance/salsa/spellingUncheckedJS.js(2,1): error TS2552: Cannot find name 'inmodule'. Did you mean 'inModule'?
tests/cases/conformance/salsa/spellingUncheckedJS.js(6,5): error TS2552: Cannot find name 'locale'. Did you mean 'locals'?
tests/cases/conformance/salsa/spellingUncheckedJS.js(26,8): error TS2551: Property 'spaaaace' does not exist on type '{ spaaace: number; }'. Did you mean 'spaaace'?
tests/cases/conformance/salsa/spellingUncheckedJS.js(27,8): error TS2551: Property 'spaace' does not exist on type '{ spaaace: number; }'. Did you mean 'spaaace'?


==== tests/cases/conformance/salsa/spellingUncheckedJS.js (4 errors) ====
    export var inModule = 1
    inmodule.toFixed()
    ~~~~~~~~
!!! error TS2552: Cannot find name 'inmodule'. Did you mean 'inModule'?
    
    function f() {
        var locals = 2
        locale.toFixed()
        ~~~~~~
!!! error TS2552: Cannot find name 'locale'. Did you mean 'locals'?
!!! related TS2728 tests/cases/conformance/salsa/spellingUncheckedJS.js:5:9: 'locals' is declared here.
    }
    class Classe {
        non = 'oui'
        methode() {
            // no error on 'this' references
            return this.none
        }
    }
    class Derivee extends Classe {
        methode() {
            // no error on 'super' references
            return super.none
        }
    }
    
    
    var object = {
        spaaace: 3
    }
    object.spaaaace // error on read
           ~~~~~~~~
!!! error TS2551: Property 'spaaaace' does not exist on type '{ spaaace: number; }'. Did you mean 'spaaace'?
!!! related TS2728 tests/cases/conformance/salsa/spellingUncheckedJS.js:24:5: 'spaaace' is declared here.
    object.spaace = 12 // error on write
           ~~~~~~
!!! error TS2551: Property 'spaace' does not exist on type '{ spaaace: number; }'. Did you mean 'spaaace'?
!!! related TS2728 tests/cases/conformance/salsa/spellingUncheckedJS.js:24:5: 'spaaace' is declared here.
    object.fresh = 12 // OK
    other.puuuce // OK, from another file
    new Date().getGMTDate() // OK, from another file
    
    // No suggestions for globals from other files
    const atoc = setIntegral(() => console.log('ok'), 500)
    AudioBuffin // etc
    Jimmy
    Jon
    
==== tests/cases/conformance/salsa/other.js (1 errors) ====
    var Jimmy = 1
    var John = 2
    Jon // error, it's from the same file
    ~~~
!!! error TS2552: Cannot find name 'Jon'. Did you mean 'John'?
!!! related TS2728 tests/cases/conformance/salsa/other.js:2:5: 'John' is declared here.
    var other = {
        puuce: 4
    }
    